protect admin page/ resolve login on mobile

--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -101,7 +101,7 @@ body {
   display: flex;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 991px) {
   .desktop-only {
     display: none;
   }
